{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 10,
  "lineage": "c6c4f257-78e2-3e38-9202-99e8c5da899e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sysops_web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sysops_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:167096172805:internet-gateway/igw-07ee896dffd3dcdd5",
            "id": "igw-07ee896dffd3dcdd5",
            "owner_id": "167096172805",
            "tags": {
              "Name": "SysOps Internet Gateway"
            },
            "tags_all": {
              "Name": "SysOps Internet Gateway"
            },
            "vpc_id": "vpc-016b013f07507d76a"
          },
          "dependencies": [
            "aws_vpc.sysops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sysops_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:167096172805:route-table/rtb-03e5b9ddbcc6e43f8",
            "id": "rtb-03e5b9ddbcc6e43f8",
            "owner_id": "167096172805",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07ee896dffd3dcdd5",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07ee896dffd3dcdd5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SysOps Public Route Table"
            },
            "tags_all": {
              "Name": "SysOps Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-016b013f07507d76a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sysops_igw",
            "aws_vpc.sysops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "_sysops_public_1_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sysops_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:167096172805:security-group/sg-00ab010fdd544c61d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ab010fdd544c61d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SysOps HTTP and SSH",
            "name_prefix": "",
            "owner_id": "167096172805",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-016b013f07507d76a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sysops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sysops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:167096172805:vpc/vpc-016b013f07507d76a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01af05d19ce66beed",
            "default_route_table_id": "rtb-01bb409f20445a770",
            "default_security_group_id": "sg-01556c1c4c02f514b",
            "dhcp_options_id": "dopt-0b2b476e43c30fd8d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-016b013f07507d76a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01bb409f20445a770",
            "owner_id": "167096172805",
            "tags": {
              "Name": "sysops_VPC"
            },
            "tags_all": {
              "Name": "sysops_VPC"
            }
          }
        }
      ]
    }
  ]
}